--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: fixed; 
+  width: 100%;
 }
 
 .App-logo {
@@ -35,4 +37,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+.SideNav{
+  height: 100%; 
+  width: 10%;  
+  position: fixed; 
+  z-index: 1; 
+  top: 10%; 
+  left: 0; 
+  background-color:lightgrey; 
+  color: white;
+  transition: .5s ease; 
+  overflow-x: hidden; 
+  padding-top: 20px; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+  text-decoration: none;
+}
+.SideNav a:link {
+  text-decoration: none;
+}
+
+.SideNav a:visited {
+  text-decoration: none;
+}
+
+.SideNav a:hover {
+  text-decoration: underline;
+}
+
+.SideNav a:active {
+  text-decoration: underline;
+}
+.MainContent{
+  top:10%;
+  padding-left: 12%;
+  width: 85%;
+  display: flex; 
+  flex-direction: column; 
 }
