--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,12 @@
   top:10%;
   padding-left: 12%;
   width: 85%;
-  display: flex; 
-  flex-direction: column; 
+  overflow: hidden;
+}
+
+.App1{
+  top:30%;
+  padding-left: 5%;
+  width: 90%;
+  overflow: hidden;
 }
